Bug 432598 - Marble uses ws.geonames.org, which is gone, should use api.geonames.org
Summary: Marble uses ws.geonames.org, which is gone, should use api.geonames.org
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs All
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL: https://www.geonames.org/export/ws-ov...
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-07 04:58 UTC by Kevin Kofler
Modified: 2021-02-27 00:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.3
Sentry Crash Report:


Attachments
marble-19.12.2-kde#432598.patch (4.24 KB, patch)
2021-02-19 03:35 UTC, Kevin Kofler
Details
marble-20.12.2-kde#432598.patch (3.56 KB, patch)
2021-02-19 03:52 UTC, Kevin Kofler
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Kofler 2021-02-07 04:58:17 UTC
SUMMARY
The geonames-based Marble plugins, such as the Wikipedia one, use the ws.geonames.org server. But that domain appears to be gone. As a result, the services do not work.

STEPS TO REPRODUCE
1. Start Marble.
2. Enable the Wikipedia service.

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
Wikipedia buttons start showing up.

SOFTWARE/OS VERSIONS
I use Fedora 32, but it should not matter. All branches of Marble use the same obsolete URL.

ADDITIONAL INFORMATION
According to:
https://www.geonames.org/export/ws-overview.html
the services use api.geonames.org now.
Comment 1 Kevin Kofler 2021-02-19 03:35:55 UTC
Created attachment 135880 [details]
marble-19.12.2-kde#432598.patch

The attached patch (against the old version of Marble I am still running, but it should apply to the current master) fixes the issue for me.

Are you OK with me committing (and pushing) this patch?
Comment 2 Kevin Kofler 2021-02-19 03:37:29 UTC
(It is really as straightforward as replacing ws.geonames.org with api.geonames.org everywhere, no other changes needed.)
Comment 3 Kevin Kofler 2021-02-19 03:45:40 UTC
Actually, examples/qml/data-layers/EarthquakesModel.qml was already fixed (so that part of the patch is obsolete), but the .cpp files were not.
Comment 4 Kevin Kofler 2021-02-19 03:52:19 UTC
Created attachment 135881 [details]
marble-20.12.2-kde#432598.patch

This version of the patch should apply cleanly to master and 20.12.
Comment 5 Kevin Kofler 2021-02-27 00:22:14 UTC
Git commit 4fbec8ea4827744f1b74ed709e6b5cce27d4eff8 by Kevin Kofler.
Committed on 27/02/2021 at 00:21.
Pushed by kkofler into branch 'master'.

Fix GeoNames web service URL, is now api.geonames.org (#432598)

Fix geonamesUrl in src/plugins/render/*/*.cpp from ws.geonames.org
(which no longer resolves) to api.geonames.org.

M  +1    -1    src/plugins/render/earthquake/EarthquakeModel.cpp
M  +1    -1    src/plugins/render/postalcode/PostalCodeModel.cpp
M  +2    -2    src/plugins/render/weather/GeoNamesWeatherService.cpp
M  +1    -1    src/plugins/render/wikipedia/WikipediaModel.cpp

https://invent.kde.org/education/marble/commit/4fbec8ea4827744f1b74ed709e6b5cce27d4eff8
Comment 6 Kevin Kofler 2021-02-27 00:23:42 UTC
Git commit 86d22b6f9735673cb87fbfc6e246c23718463cba by Kevin Kofler.
Committed on 27/02/2021 at 00:23.
Pushed by kkofler into branch 'release/20.12'.

Fix GeoNames web service URL, is now api.geonames.org (#432598)

Fix geonamesUrl in src/plugins/render/*/*.cpp from ws.geonames.org
(which no longer resolves) to api.geonames.org.

M  +1    -1    src/plugins/render/earthquake/EarthquakeModel.cpp
M  +1    -1    src/plugins/render/postalcode/PostalCodeModel.cpp
M  +2    -2    src/plugins/render/weather/GeoNamesWeatherService.cpp
M  +1    -1    src/plugins/render/wikipedia/WikipediaModel.cpp

https://invent.kde.org/education/marble/commit/86d22b6f9735673cb87fbfc6e246c23718463cba
Comment 7 Kevin Kofler 2021-02-27 00:27:16 UTC
Should be in time for 20.12.3.