Fix GeoNames web service URL, is now api.geonames.org (#432598)

Fix geonamesUrl in src/plugins/render/*/*.cpp from ws.geonames.org
(which no longer resolves) to api.geonames.org.

BUG: 432598